# QMdmm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  QMdmm.pri  QMdmm.pro  README.md
QMdmmCore/: CMakeLists.txt  QMdmmCore.pro  qmdmmcore.cpp  qmdmmcoreglobal.h  qmdmmplayer.cpp  qmdmmplayer.h  qmdmmprotocol.cpp  qmdmmprotocol.h  qmdmmroom.cpp  qmdmmroom.h  qmdmmstonescissorscloth.cpp  qmdmmstonescissorscloth.h
QMdmmCore/src/: qmdmmagent.cpp  qmdmmagent.h  qmdmmcore.cpp  qmdmmcoreglobal.h  qmdmmdebug.cpp  qmdmmdebug.h  qmdmmdebug_p.cpp  qmdmmdebug_p.h  qmdmmlogic.cpp  qmdmmlogic.h  qmdmmlogic_p.cpp  qmdmmlogic_p.h  qmdmmplayer.cpp  qmdmmplayer.h  qmdmmplayer_p.cpp  qmdmmplayer_p.h  qmdmmprotocol.cpp  qmdmmprotocol.h  qmdmmroom.cpp  qmdmmroom.h  qmdmmroom_p.h  qmdmmsettings.cpp  qmdmmsettings.h  qmdmmsettings_p.cpp  qmdmmsettings_p.h  qmdmmstonescissorscloth.cpp  qmdmmstonescissorscloth.h
QMdmmCore/test/: CMakeLists.txt  test.cpp  test.h  tst_qmdmmcore.cpp  tst_qmdmmdebug.cpp  tst_qmdmmlogic.cpp  tst_qmdmmplayer.cpp  tst_qmdmmprotocol.cpp  tst_qmdmmroom.cpp
QMdmmGui/: CMakeLists.txt
QMdmmGui/qml/: Button.qml  RootItem.qml  StartScene.qml  Window.qml  main.qml
QMdmmGui/src/: cppif.h  main.cpp  qmdmmgui.h
QMdmmNetworking/: CMakeLists.txt
QMdmmNetworking/src/: qmdmmagent.cpp  qmdmmagent.h  qmdmmagent_p.h  qmdmmclient.cpp  qmdmmclient.h  qmdmmclient_p.cpp  qmdmmclient_p.h  qmdmmlogicrunner.cpp  qmdmmlogicrunner.h  qmdmmlogicrunner_p.h  qmdmmnetworkingglobal.h  qmdmmserver.cpp  qmdmmserver.h  qmdmmserver_p.h  qmdmmsocket.cpp  qmdmmsocket.h  qmdmmsocket_p.h
QMdmmServer/: CMakeLists.txt  QMdmmServer.pro  qmdmmprotocol.cpp  qmdmmprotocol.h  qmdmmserver.cpp  qmdmmserver.h  qmdmmserverglobal.h  qmdmmserverplayer.cpp  qmdmmserverplayer.h  qmdmmserverroom.cpp  qmdmmserverroom.h  qmdmmserversocket.cpp  qmdmmserversocket.h  qmdmmsocket.cpp  qmdmmsocket.h
QMdmmServer/src/: config.cpp  config.h  main.cpp  qmdmmagent.cpp  qmdmmagent.h  qmdmmagent_p.h  qmdmmclient.cpp  qmdmmclient.h  qmdmmclient_p.h  qmdmmlogicrunner.cpp  qmdmmlogicrunner.h  qmdmmlogicrunner_p.h  qmdmmserver.cpp  qmdmmserver.h  qmdmmserver_p.h  qmdmmserverglobal.h  qmdmmsocket.cpp  qmdmmsocket.h  qmdmmsocket_p.h
cmake/: AutoGenerateHeader.cmake
doc/: CMakeLists.txt
doc/QMdmmCore/: group.cpp
